--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "core-js": "^3.21.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
