--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   "dependencies": {
     "core-js": "^3.21.1",
     "normalize.css": "^8.0.1",
-    "pinia": "^2.0.11",
+    "pinia": "^2.0.13",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^16.11.25",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "@vitejs/plugin-vue-jsx": "^1.3.8",
+    "@rushstack/eslint-patch": "^1.1.2",
+    "@types/node": "^17.0.23",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.9",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.9",
-    "typescript": "~4.5.5",
-    "vite": "^2.8.4",
-    "vue-tsc": "^0.31.4"
+    "eslint": "^8.13.0",
+    "eslint-plugin-vue": "^8.6.0",
+    "prettier": "^2.6.2",
+    "sass": "^1.50.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.1",
+    "vue-tsc": "^0.33.9"
   }
 }
